--- a/index.html
+++ b/index.html
@@ -6,24 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat&Out</title>
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="normalize.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
+    <nav>
+        <div class="container">
+            <div class="brand-logo">
+                <span>Eat&Out</span>
+            </div>
+
+            <div class="navigations">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Menu</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+            <div class="button">
+                <button class="btn">Order Online</button>
+            </div>
+            <button class="hamburger-nav">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+        </div>
+
+    </nav>
+    <section class="hero-sec">
+        <div class="hero-section">
+            <h3>Fast Food Restaurant</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis labore tenetur nesciunt facere quia
+                ex, dolorum eligendi culpa iste ducimus enim fugit? Eligendi eos aperiam impedit amet, maiores tempore
+                quis ullam quae natus officiis quod vitae sed debitis exercitationem eaque.
+            </p>
+            <button class="section-btn">Order Now</button>
+        </div>
+    </section>
 
 </body>
 
