--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <nav>
         <div class="container">
             <div class="brand-logo">
@@ -55,6 +56,7 @@
         </div>
 
     </nav>
+    <!-- Hero Section -->
     <section class="hero-sec">
         <div class="hero-section">
             <h3>Fast Food Restaurant</h3>
@@ -65,7 +67,35 @@
             <button class="section-btn">Order Now</button>
         </div>
     </section>
+    <!-- Discount Section -->
+    <section class="discount-sec">
 
+        <div class="discount">
+
+            <div class="discount-cards">
+                <div class="card-img">
+                    <img src="/images/hmbg-mn1.jpg" alt="">
+                </div>
+                <div class="card-items">
+                    <h3>Tasty Friday</h3>
+                    <p>%20<sub> off</sub></p>
+                    <button class="card-btn section-btn">Order Now</button>
+                </div>
+            </div>
+
+            <div class="discount-cards">
+                <div class="card-img">
+                    <img src="/images/dssrt-mn1.jpg" alt="">
+                </div>
+                <div class="card-items">
+                    <h3>Dessert Day</h3>
+                    <p>%15<sub> off</sub></p>
+                    <button class="card-btn section-btn">Order Now</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
