--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
 
     </nav>
+
     <!-- Hero Section -->
     <section class="hero-sec">
         <div class="hero-section">
@@ -67,6 +68,7 @@
             <button class="section-btn">Order Now</button>
         </div>
     </section>
+
     <!-- Discount Section -->
     <section class="discount-sec">
 
@@ -94,6 +96,135 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <!-- Menu Section -->
+    <section class="menu-sec">
+        <div class="menu-container">
+            <div class="menu-heading">
+                <h2>Our Menu</h2>
+            </div>
+            <div class="menu-filters">
+                <ul>
+                    <li>All</li>
+                    <li>Burger</li>
+                    <li>Pizza</li>
+                    <li>Dessert</li>
+                </ul>
+            </div>
+            <div class="filters-content">
+                <div class="menu-content">
+
+                    <div class="menu-card">
+                        <img src="/images/hmbg-mn1.jpg" alt="">
+                        <div class="options">
+                            <h3>Hamburger-1</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="/images/hmbg-mn2.jpg" alt="">
+                        <div class="options">
+                            <h3>Hamburger-2</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="/images/hmbg-mn3.jpg" alt="">
+                        <div class="options">
+                            <h3>Hamburger-3</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="/images/hmbg-mn4.jpg" alt="">
+                        <div class="options">
+                            <h3>Hamburger-4</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="/images/dssrt-mn1.jpg" alt="">
+                        <div class="options">
+                            <h3>Dessert-1</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="/images/dssrt-mn2.jpg" alt="">
+                        <div class="options">
+                            <h3>Dessert-2</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <img src="/images/dssrt-mn3.jpg" alt="">
+                        <div class="options">
+                            <h3>Dessert-3</h3>
+                            <p>Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem
+                                repellendus sed eaque</p>
+                            <div>
+                                <h6>$20</h6>
+                                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="btn-box">
+                <a href="">View More</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- We Are Eat&Out -->
+    <section class="about-us">
+        <div class="about-text">
+            <h1>We Are Eat&Out</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur mollitia sunt, aliquid, harum quaerat
+                quam ipsum placeat animi fugit sit eum nostrum expedita? Beatae rerum suscipit quae dolore, accusamus
+                aliquam.
+            </p>
+            <button class="abt-btn">Read More</button>
+        </div>
+        <div class="hmbg-svg">
+            <img src="/images/hamburger-png.png" alt="">
         </div>
     </section>
 </body>
