--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
             <img src="/images/hamburger-png.png" alt="">
         </div>
     </section>
+
+    <!-- Form Section -->
+
+
+    <!-- Footer Section -->
+
 </body>
 
 </html>
