--- a/index.html
+++ b/index.html
@@ -229,9 +229,66 @@
     </section>
 
     <!-- Form Section -->
+    <section class="form">
 
+        <div class="label">
+            <h3>Rezervation</h3>
+        </div>
+        <div class="form-container">
+            <form action="#">
+                <input type="text" name="name" id="name" placeholder="Your Name">
+                <input type="tel" name="number" id="number" placeholder="Phone Number">
+                <input type="email" name="email" id="email" placeholder="Your Email">
+                <input type="number" name="number" id="number" placeholder="How many persons">
+                <input type="date" name="date" id="date" placeholder="gg.aa.yyyy">
+            </form>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6349278.739028104!2d30.686165609308652!3d39.00998078817264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b0155c964f2671%3A0x40d9dbd42a625f2a!2zVMO8cmtpeWU!5e0!3m2!1str!2str!4v1651081655058!5m2!1str!2str"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <button type="submit" class="abt-btn form-btn">Send</button>
+    </section>
 
     <!-- Footer Section -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-info">
+                <div class="info-contact">
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li>Location</li>
+                        <li>Phone</li>
+                        <li>Mail</li>
+                    </ul>
+                </div>
+                <div class="info-brand">
+                    <h2>Eat&Out</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur molestias illo reprehenderit
+                        veritatis deserunt sequi obcaecati maxime laborum. Libero sequi maiores quasi in cupiditate
+                        assumenda at consequuntur ipsum natus tempora!
+                    </p>
+                    <ul class="social">
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-shopify"></i></li>
+
+                    </ul>
+                </div>
+                <div class="info-hours">
+                    <h3>Opening Hours</h3>
+                    <p>Everyday</p>
+                    <p>10.00 am - 10.00pm</p>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2022 All Rights Reserved</p>
+                <p>&copy; Cloned By Cagin Sucu</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
